fixed navbar on mobile

--- a/portfolio.css
+++ b/portfolio.css
@@ -184,11 +184,13 @@ p.info{
 	color: #ccc;
 }
 
-
 @media only screen and (max-width: 768px){
-	/* body{
+	s{
+		display: none;
+	}
+	body{
 		padding-top: 210px;
-	} */
+	}
 	
 	div.project{
 		width: 100%;
